--- a/src/main/resources/fxml/deadlineCard.fxml
+++ b/src/main/resources/fxml/deadlineCard.fxml
@@ -2,18 +2,21 @@
 
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import java.lang.String?>
-<VBox fx:id="cardPane" prefHeight="220.0" prefWidth="252.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<VBox fx:id="cardPane" prefHeight="220.0" prefWidth="285.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.DeadlineCardController">
    <children>
       <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="227.0">
          <children>
             <MaterialDesignIconView glyphName="PIN" rotate="45.0" size="18" />
          </children>
       </HBox>
-      <Label fx:id="cardProjectTitleLbl" text="Project Title" />
+      <Label fx:id="cardProjectTitleLbl" prefHeight="17.0" prefWidth="294.0" text="Project Title" wrapText="true" />
       <HBox prefHeight="102.0" prefWidth="220.0">
          <children>
             <JFXSpinner fx:id="cardProjectProgressIndicator" prefHeight="102.0" prefWidth="81.0" progress="0.59" styleClass="progressSpinner" />
@@ -22,16 +25,15 @@
                   <Label fx:id="cardTaskTitleLbl" text="Task Title" />
                   <AnchorPane prefHeight="57.0" prefWidth="129.0">
                      <children>
-                        <Label fx:id="cardTaskDescriptionLbl" alignment="TOP_LEFT" text="Task Description" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <Label fx:id="cardTaskDescriptionLbl" alignment="TOP_LEFT" text="Task Description" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
                    <HBox spacing="4.0">
                        <children>
-                           <Label fx:id="cardDueDateLbl" prefHeight="17.0" prefWidth="54.0" text="Due Date"/>
-                           <Label fx:id="cardDueDateLblValue" layoutX="10.0" layoutY="10.0" prefHeight="17.0"
-                                  prefWidth="83.0" text="Due Date" HBox.hgrow="ALWAYS">
+                           <Label fx:id="cardDueDateLbl" prefHeight="17.0" prefWidth="54.0" text="Due Date" />
+                           <Label fx:id="cardDueDateLblValue" layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="83.0" text="Due Date" HBox.hgrow="ALWAYS">
                                <HBox.margin>
-                                   <Insets/>
+                                   <Insets />
                                </HBox.margin>
                            </Label>
                        </children>
