--- a/src/main/resources/fxml/pomodoreConfig.fxml
+++ b/src/main/resources/fxml/pomodoreConfig.fxml
@@ -2,7 +2,6 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,85 +13,77 @@
    <children>
       <StackPane fx:id="stackPane" layoutX="411.0" layoutY="250.0" prefHeight="150.0" prefWidth="405.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox fx:id="vBox" alignment="CENTER" prefHeight="650.0" prefWidth="832.0">
+            <VBox fx:id="vBox" prefHeight="498.0" prefWidth="403.0" spacing="20.0" styleClass="main-panel">
                <children>
-                  <VBox prefHeight="498.0" prefWidth="403.0" spacing="20.0" styleClass="background">
+                  <HBox prefHeight="24.0" prefWidth="981.0">
                      <children>
-                        <HBox prefHeight="24.0" prefWidth="981.0">
-                           <children>
-                              <Label prefHeight="26.0" prefWidth="345.0" styleClass="title" text="Settings" HBox.hgrow="ALWAYS" />
-                              <JFXButton fx:id="stageCloseBtn" contentDisplay="GRAPHIC_ONLY" ripplerFill="#ff5e00">
-                                 <graphic>
-                                    <MaterialDesignIconView glyphName="WINDOW_CLOSE" size="17" />
-                                 </graphic>
-                              </JFXButton>
-                           </children>
-                        </HBox>
-                        <Label styleClass="settings-label" text="Maximum Ongoing Projects" />
-                        <HBox alignment="CENTER" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
-                           <VBox.margin>
-                              <Insets top="-20.0" />
-                           </VBox.margin>
-                           <children>
-                              <JFXButton fx:id="maxProjects1" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="1" />
-                              <JFXButton fx:id="maxProjects2" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="2" />
-                              <JFXButton fx:id="maxProjects3" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="3" />
-                              <JFXButton fx:id="maxProjects4" layoutX="244.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="4" />
-                              <JFXButton fx:id="maxProjects5" layoutX="283.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="5" />
-                           </children>
-                        </HBox>
-                        <Label layoutX="30.0" layoutY="71.0" styleClass="settings-label" text="Pomodore Task Duration (minutes)" />
-                        <HBox alignment="CENTER" layoutX="30.0" layoutY="90.0" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
-                           <children>
-                              <JFXButton fx:id="pomodoreTime20" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="20" />
-                              <JFXButton fx:id="pomodoreTime25" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="25" />
-                              <JFXButton fx:id="pomodoreTime30" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="30" />
-                              <JFXButton fx:id="pomodoreTime35" layoutX="244.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="35" />
-                              <JFXButton fx:id="pomodoreTime40" layoutX="283.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="40" />
-                           </children>
-                           <VBox.margin>
-                              <Insets top="-15.0" />
-                           </VBox.margin>
-                        </HBox>
-                        <Label layoutX="30.0" layoutY="160.0" styleClass="settings-label" text="Pomodore Short Interval Duration (minutes)" />
-                        <HBox alignment="CENTER" layoutX="30.0" layoutY="184.0" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
-                           <children>
-                              <JFXButton fx:id="pomShortBreak3" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="3" />
-                              <JFXButton fx:id="pomShortBreak5" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="5" />
-                              <JFXButton fx:id="pomShortBreak10" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="10" />
-                           </children>
-                           <VBox.margin>
-                              <Insets top="-15.0" />
-                           </VBox.margin>
-                        </HBox>
-                        <Label layoutX="30.0" layoutY="254.0" styleClass="settings-label" text="Pomodore Long Interval Duration (minutes)" />
-                        <HBox alignment="CENTER" layoutX="30.0" layoutY="278.0" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
-                           <children>
-                              <JFXButton fx:id="pomLongBreak10" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="10" />
-                              <JFXButton fx:id="pomLongBreak15" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="15" />
-                              <JFXButton fx:id="pomLongBreak20" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="20" />
-                           </children>
-                           <VBox.margin>
-                              <Insets top="-15.0" />
-                           </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER">
-                           <children>
-                              <JFXButton fx:id="updateSettingsBtn" onAction="#HandleUpdateSettings" prefHeight="30.0" prefWidth="152.0" styleClass="main-button" text="Update Settings" />
-                           </children>
-                        </HBox>
+                        <Label prefHeight="26.0" prefWidth="345.0" styleClass="title" text="Settings" HBox.hgrow="ALWAYS" />
+                        <JFXButton fx:id="stageCloseBtn" contentDisplay="GRAPHIC_ONLY" ripplerFill="#ff5e00">
+                           <graphic>
+                              <MaterialDesignIconView glyphName="WINDOW_CLOSE" size="17" />
+                           </graphic>
+                        </JFXButton>
                      </children>
-                     <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="15.0" />
-                     </padding>
-                  </VBox>
+                  </HBox>
+                  <Label styleClass="settings-label" text="Maximum Ongoing Projects" />
+                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
+                     <VBox.margin>
+                        <Insets top="-20.0" />
+                     </VBox.margin>
+                     <children>
+                        <JFXButton fx:id="maxProjects1" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="1" />
+                        <JFXButton fx:id="maxProjects2" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="2" />
+                        <JFXButton fx:id="maxProjects3" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="3" />
+                        <JFXButton fx:id="maxProjects4" layoutX="244.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="4" />
+                        <JFXButton fx:id="maxProjects5" layoutX="283.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="5" />
+                     </children>
+                  </HBox>
+                  <Label layoutX="30.0" layoutY="71.0" styleClass="settings-label" text="Pomodore Task Duration (minutes)" />
+                  <HBox alignment="CENTER" layoutX="30.0" layoutY="90.0" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
+                     <children>
+                        <JFXButton fx:id="pomodoreTime20" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="20" />
+                        <JFXButton fx:id="pomodoreTime25" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="25" />
+                        <JFXButton fx:id="pomodoreTime30" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="30" />
+                        <JFXButton fx:id="pomodoreTime35" layoutX="244.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="35" />
+                        <JFXButton fx:id="pomodoreTime40" layoutX="283.0" layoutY="26.0" prefHeight="31.0" prefWidth="104.0" styleClass="uploadPhotoBtn" text="40" />
+                     </children>
+                     <VBox.margin>
+                        <Insets top="-15.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <Label layoutX="30.0" layoutY="160.0" styleClass="settings-label" text="Pomodore Short Interval Duration (minutes)" />
+                  <HBox alignment="CENTER" layoutX="30.0" layoutY="184.0" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
+                     <children>
+                        <JFXButton fx:id="pomShortBreak3" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="3" />
+                        <JFXButton fx:id="pomShortBreak5" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="5" />
+                        <JFXButton fx:id="pomShortBreak10" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="10" />
+                     </children>
+                     <VBox.margin>
+                        <Insets top="-15.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <Label layoutX="30.0" layoutY="254.0" styleClass="settings-label" text="Pomodore Long Interval Duration (minutes)" />
+                  <HBox alignment="CENTER" layoutX="30.0" layoutY="278.0" prefHeight="50.0" prefWidth="363.0" spacing="10.0">
+                     <children>
+                        <JFXButton fx:id="pomLongBreak10" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="10" />
+                        <JFXButton fx:id="pomLongBreak15" layoutX="140.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="15" />
+                        <JFXButton fx:id="pomLongBreak20" layoutX="192.0" layoutY="26.0" prefHeight="31.0" prefWidth="110.0" styleClass="uploadPhotoBtn" text="20" />
+                     </children>
+                     <VBox.margin>
+                        <Insets top="-15.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <JFXButton fx:id="updateSettingsBtn" onAction="#HandleUpdateSettings" prefHeight="30.0" prefWidth="152.0" styleClass="main-button" text="Update Settings" />
+                     </children>
+                  </HBox>
                </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="15.0" />
+               </padding>
             </VBox>
          </children>
       </StackPane>
    </children>
-   <styleClass>
-      <String fx:value="background" />
-      <String fx:value="border" />
-   </styleClass>
 </AnchorPane>
