--- a/src/main/resources/fxml/projectListCard.fxml
+++ b/src/main/resources/fxml/projectListCard.fxml
@@ -8,7 +8,7 @@
    <children>
       <AnchorPane prefHeight="57.0" prefWidth="279.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label fx:id="projectListName" styleClass="first-list-item" text="NNPX News Website" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Label fx:id="projectListName" styleClass="first-list-item" text="NNPX News Website" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="11.0" layoutY="11.0" prefHeight="57.0" prefWidth="292.0" HBox.hgrow="ALWAYS">
