--- a/src/main/resources/fxml/taskDashboard.fxml
+++ b/src/main/resources/fxml/taskDashboard.fxml
@@ -36,7 +36,7 @@
                                     <children>
                                         <AnchorPane prefHeight="115.0" prefWidth="398.0">
                                             <children>
-                                                <Label fx:id="projectDescriptionLbl" alignment="TOP_LEFT" layoutX="269.0" layoutY="84.0" text="Project Description" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                <Label fx:id="projectDescriptionLbl" alignment="TOP_LEFT" layoutX="269.0" layoutY="84.0" text="Project Description" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                     <padding>
                                                         <Insets bottom="10.0" right="10.0" top="10.0" />
                                                     </padding>
