--- a/src/main/resources/fxml/taskListCard.fxml
+++ b/src/main/resources/fxml/taskListCard.fxml
@@ -85,7 +85,7 @@
                      <children>
                          <JFXButton fx:id="resumeTaskBtn" contentDisplay="RIGHT" prefHeight="12.0" prefWidth="101.0" styleClass="uploadPhotoBtn" text="Resume" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0">
                            <graphic>
-                              <MaterialDesignIconView glyphName="PLAYLIST_PLAY" rotate="-180.0" size="15" />
+                              <MaterialDesignIconView glyphName="PLAY_CIRCLE_OUTLINE" size="15" />
                            </graphic>
                            <padding>
                               <Insets bottom="3.0" top="3.0" />
