--- a/src/main/resources/fxml/pomodoreActivity.fxml
+++ b/src/main/resources/fxml/pomodoreActivity.fxml
@@ -16,9 +16,9 @@
 
 <AnchorPane prefHeight="594.0" prefWidth="983.0" styleClass="main-panel" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.PomodoreActivityController">
    <children>
-      <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <StackPane fx:id="stackPane" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
+            <BorderPane fx:id="borderPane" prefHeight="200.0" prefWidth="200.0">
                <top>
                   <HBox fx:id="titleBar" alignment="CENTER_RIGHT" prefHeight="22.0" prefWidth="1100.0" styleClass="title-bar" BorderPane.alignment="CENTER">
                      <children>
