--- a/src/main/resources/fxml/pomodoreActivity.fxml
+++ b/src/main/resources/fxml/pomodoreActivity.fxml
@@ -112,7 +112,7 @@
                                     <Font size="76.0" />
                                  </font>
                               </Label>
-                              <AnchorPane prefHeight="133.0" prefWidth="264.0">
+                              <AnchorPane prefHeight="212.0" prefWidth="264.0">
                                  <children>
                                     <JFXButton fx:id="tenMinsAdditionalBtn" layoutX="80.0" layoutY="54.0" onAction="#addTenMinsToTaskExec" prefHeight="69.0" prefWidth="74.0" style="-fx-background-color: #2F4475; -fx-background-radius: 40;" text="+10m" textFill="WHITE" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="20.0">
                                        <font>
@@ -124,7 +124,12 @@
                                           <Font size="15.0" />
                                        </font>
                                     </JFXButton>
-                                    <JFXButton fx:id="pauseTaskExecBtn" layoutX="100.0" layoutY="55.0" onAction="#PauseTaskExecEvent" prefHeight="69.0" prefWidth="74.0" style="-fx-background-color: #2F4475; -fx-background-radius: 40;" text="Pause" textFill="WHITE">
+                                    <JFXButton fx:id="pauseTaskExecBtn" layoutX="48.0" layoutY="112.0" onAction="#PauseTaskExecEvent" prefHeight="69.0" prefWidth="74.0" style="-fx-background-color: #2F4475; -fx-background-radius: 40;" text="Pause" textFill="WHITE" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="48.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </JFXButton>
+                                    <JFXButton fx:id="startTasksBtn" layoutX="132.0" layoutY="112.0" onAction="#StartTaskExecEvent" prefHeight="69.0" prefWidth="74.0" style="-fx-background-color: GREEN; -fx-background-radius: 40;" text="Start" textFill="WHITE" AnchorPane.bottomAnchor="31.0" AnchorPane.rightAnchor="48.0">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -135,14 +140,18 @@
                         </VBox>
                         <VBox prefHeight="513.0" prefWidth="278.0" spacing="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label prefHeight="17.0" prefWidth="234.0" text="Pomodore Cycle">
-                                 <font>
-                                    <Font size="15.0" />
-                                 </font>
+                              <HBox prefHeight="28.0" prefWidth="307.0">
                                  <VBox.margin>
                                     <Insets left="10.0" />
                                  </VBox.margin>
-                              </Label>
+                                 <children>
+                                    <Label prefHeight="21.0" prefWidth="275.0" text="Pomodore Cycle">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
                               <ScrollPane fitToWidth="true" prefHeight="338.0" prefWidth="272.0" styleClass="white-bg" VBox.vgrow="ALWAYS">
                                  <content>
                                     <VBox fx:id="pomodoreCycleList" spacing="2.0" />
